; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_lgdt3306a.c_lgdt3306a_deselect.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/dvb-frontends/extr_lgdt3306a.c_lgdt3306a_deselect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_mux_core = type { i32 }
%struct.i2c_client = type { i32 }
%struct.lgdt3306a_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_mux_core*, i32)* @lgdt3306a_deselect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lgdt3306a_deselect(%struct.i2c_mux_core* %0, i32 %1) #0 {
  %3 = alloca %struct.i2c_mux_core*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.i2c_client*, align 8
  %6 = alloca %struct.lgdt3306a_state*, align 8
  store %struct.i2c_mux_core* %0, %struct.i2c_mux_core** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.i2c_mux_core*, %struct.i2c_mux_core** %3, align 8
  %8 = call %struct.i2c_client* @i2c_mux_priv(%struct.i2c_mux_core* %7)
  store %struct.i2c_client* %8, %struct.i2c_client** %5, align 8
  %9 = load %struct.i2c_client*, %struct.i2c_client** %5, align 8
  %10 = call %struct.lgdt3306a_state* @i2c_get_clientdata(%struct.i2c_client* %9)
  store %struct.lgdt3306a_state* %10, %struct.lgdt3306a_state** %6, align 8
  %11 = load %struct.lgdt3306a_state*, %struct.lgdt3306a_state** %6, align 8
  %12 = getelementptr inbounds %struct.lgdt3306a_state, %struct.lgdt3306a_state* %11, i32 0, i32 0
  %13 = call i32 @lgdt3306a_i2c_gate_ctrl(i32* %12, i32 0)
  ret i32 %13
}

declare dso_local %struct.i2c_client* @i2c_mux_priv(%struct.i2c_mux_core*) #1

declare dso_local %struct.lgdt3306a_state* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @lgdt3306a_i2c_gate_ctrl(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
